# mini_dns

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: ci.yml
docs/superpowers/specs/: 2026-07-21-edge-dns-phase1-design.md  2026-07-21-edge-dns-phase2-adblock-design.md  2026-07-21-edge-dns-phase3-metrics-design.md  2026-07-21-edge-dns-phase4-mdns-design.md  2026-07-21-edge-dns-phase5-record-management-design.md  2026-07-21-edge-dns-phase6-hardening-design.md
host_test/: CMakeLists.txt  sdkconfig
host_test/main/: CMakeLists.txt  test_dns_wire.cpp
main/: CMakeLists.txt  dns_blocklist.cpp  dns_blocklist.h  dns_blocklist_defaults.h  dns_cache.cpp  dns_cache.h  dns_forwarder.cpp  dns_forwarder.h  dns_metrics.cpp  dns_metrics.h  dns_record_store.cpp  dns_record_store.h  dns_records.h  dns_server.cpp  dns_server.h  dns_wire.cpp  dns_wire.h  http_server.cpp  http_server.h  main.cpp  mdns_responder.cpp  mdns_responder.h  wifi_connect.cpp  wifi_connect.h
